[package]
name = "aoc2023_day12"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.8.0"
stack-vec = "0.1.0"
criterion = "0.4"

[profile.release]
lto = "fat"

[[bench]]
name = "benchmark"
harness = false
